# sandbox

./: README.md
cheats/cpp/py3cpp/: file.py
cheatsheets/cpp/py3cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
cheatsheets/python/asyncio/: basics.py  basics_stopping.py
cheatsheets/python/multiprocessing/: pool_with_progress.py
scripts/: compare.py  duplicates.py  fileutil.py  gerber.py  hash.py  represented.py
scripts/aether/: sync.bat
scripts/crypt/: sha256sum.py
scripts/docker/: ec2-setup.txt
scripts/kicad/: osh-park-rename.py
